--- a/PRINCIPALE/drone_sim/.vscode/settings.json
+++ b/PRINCIPALE/drone_sim/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "termios.h": "c",
-        "file.h": "c"
+        "file.h": "c",
+        "signal.h": "c"
     }
 }
