--- a/PRINCIPALE/drone_sim/.vscode/settings.json
+++ b/PRINCIPALE/drone_sim/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "termios.h": "c",
         "file.h": "c",
-        "signal.h": "c"
+        "signal.h": "c",
+        "functional": "c"
     }
 }
