--- a/PRINCIPALE/drone_sim/.vscode/settings.json
+++ b/PRINCIPALE/drone_sim/.vscode/settings.json
@@ -3,6 +3,7 @@
         "termios.h": "c",
         "file.h": "c",
         "signal.h": "c",
-        "functional": "c"
+        "functional": "c",
+        "stdio.h": "c"
     }
 }
