--- a/PRINCIPALE/drone_sim/.vscode/settings.json
+++ b/PRINCIPALE/drone_sim/.vscode/settings.json
@@ -4,6 +4,7 @@
         "file.h": "c",
         "signal.h": "c",
         "functional": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "system_error": "c"
     }
 }
